--- a/game.css
+++ b/game.css
@@ -1,22 +1,22 @@
-body{
-    background-color: rgb(143, 143, 143);
-}
+:root {
+    --fontsize: 22px;
+  }
 
-#canvas{
+#canvas {
     border: 5px solid black;
     position: absolute;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    background-color: rgb(197, 197, 197);
+    background-color: rgb(227, 227, 227);
     /* background: url("./images/background.png"); */
 }
 
-#warrior, #zombie, #boss, #heart, #heartDamage, #warriorBullet{
+#warrior, #zombie, #boss, #heart, #heartDamage, #warriorBullet {
     display: none; 
 }
 
-#warriorHeart0, #warriorHeart1, #warriorHeart2, #warriorHeart3, #warriorHeart4{
+#warriorHeart0, #warriorHeart1, #warriorHeart2, #warriorHeart3, #warriorHeart4 {
     width: 50px;
     height: 50px;
     position: relative;
@@ -24,7 +24,7 @@ body{
     user-select: none;
 }
 
-#settings, #backToGame, #gamerules{
+#settings, #backToGame, #gamerules {
     width: 60px;
     height: 60px;
     position: absolute;
@@ -34,11 +34,11 @@ body{
     cursor: pointer;
 }
 
-#gamerules{
+#gamerules {
     bottom: 2%;
 }
 
-#timer{
+#timer {
     position: absolute;
     top: 0%;
     left: 50%;
@@ -51,6 +51,6 @@ body{
     font-weight: bold;
 }
 
-#headline{
+#headline {
     font-family: "Arial";
 }
