--- a/settings.css
+++ b/settings.css
@@ -1,6 +1,7 @@
 :root {
   --fontsize: 22px;
   --fontHeadline: 26px;
+  --fontTitel: 26px;
   --fontStyle: "Arial";
 }
 
@@ -186,3 +187,49 @@ li a:focus {
     width: 60%;
     margin-top: 6px;
   }
+
+  legend {
+    font-size: var(--fontTitel);
+  }
+
+
+  /* Slider - Audio-Seite */
+
+  .slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: var(--fontsize);
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: var(--fontHeadline);
+  height: var(--fontHeadline);
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: var(--fontHeadline);
+  height: var(--fontHeadline);
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.output {
+  font-size: var(--fontsize);
+  padding: 48%;
+}
