--- a/game.css
+++ b/game.css
@@ -25,7 +25,7 @@
     user-select: none;
 }
 
-#settings, #backToGame, #gamerules {
+#settings, #backToGame, #gamerules{
     width: 60px;
     height: 60px;
     position: absolute;
@@ -55,3 +55,25 @@
 #headline {
     font-family: var(--fontStyle);
 }
+
+#buttonAudio {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: absolute;
+    float: left;
+    bottom: 1%;
+    font-size: var(--fontsize);
+}
+
+#buttonAudio:hover{
+    background-color: #275629;
+  }
+
+#buttonAudio:focus {
+    border: 3px solid #46083c;
+    background-color: #972da8;
+  }
