--- a/game.css
+++ b/game.css
@@ -1,15 +1,26 @@
 :root {
     --fontsize: 22px;
     --fontStyle: "Arial";
+    --colorDark: #020202;
+    --colorButton: #7ABEAD;
+    --colorButtonHover: #6FAD9E;
+}
+
+* {
+    font-family: var(--fontStyle);
+    font-weight: bold;
+    color: var(--colorDark);
+    background-color: #d3d3d3;
 }
 
 #canvas {
-    border: 5px solid black;
+    border: 4px solid #020202;
     position: absolute;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    background-color: rgb(227, 227, 227);
+    background-color: #ffffff;
+    border-radius: 11px;
     /* background: url("./images/background.png"); */
 }
 
@@ -45,20 +56,12 @@
     left: 50%;
     translate: -50% -50%;
     user-select: none;
-
     text-align: center;
     font-size: 250%;
-    font-family: var(--fontStyle);
-    font-weight: bold;
-}
-
-#headline {
-    font-family: var(--fontStyle);
 }
 
 #buttonAudio {
-    background-color: #04AA6D;
-    color: white;
+    background-color: var(--colorButton);
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
@@ -67,13 +70,9 @@
     float: left;
     bottom: 1%;
     font-size: var(--fontsize);
+    border: 3px solid var(--colorDark);
 }
 
-#buttonAudio:hover{
-    background-color: #275629;
-  }
-
-#buttonAudio:focus {
-    border: 3px solid #46083c;
-    background-color: #972da8;
-  }
+#buttonAudio:hover, #buttonAudio:focus {
+    background-color: var(--colorButtonHover);
+}
