--- a/settings.css
+++ b/settings.css
@@ -68,6 +68,9 @@ body {
   
 .column.side {
     width: 30%;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
   }
 
 .column.middle {
@@ -221,6 +224,7 @@ li a:hover:not(.active), li a:focus {
   }
   
   .label {
+    position: relative;
     float: left;
     width: 40%;
     margin-top: 6px;
@@ -295,3 +299,30 @@ li a:hover:not(.active), li a:focus {
   padding: 47%;
 }
 
+/* Tool-Tips / genauere Beschreibungen */
+
+/* .tooltip {
+  position: relative;
+  display: inline-block;
+} */
+
+.label .tooltiptext {
+  visibility: hidden;
+  width: 100%;
+  font-size: var(--fontsize);
+  background-color: var(--colorMiddle);
+  color: var(--colorLight);
+  text-align:initial;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.58);
+  padding: 5%;
+  
+  /* Position the tooltip */
+  position: absolute;
+  bottom: 1%;
+  right: 105%;
+}
+
+.label:hover .tooltiptext {
+  visibility: visible;
+}
